# cargo-fast-lint

./: .fl.toml  .gitignore  Cargo.toml  readme.md
.claude/: settings.local.json
.github/workflows/: rust.yml
examples/: demo.rs
src/: analyzer.rs  ast_cache.rs  autofix.rs  cache.rs  config.rs  incremental.rs  lib.rs  lsp_server.rs  main.rs  walker.rs
src/rules/: anti_patterns.rs  complexity.rs  docs.rs  imports.rs  mod.rs  must_use.rs  style.rs  syntax.rs  todo_macros.rs  unsafe_code.rs  unwrap_usage.rs
vscode-extension/: .vscodeignore  LICENSE  PACKAGING.md  README.md  client.js  extension.js  package-lock.json  package.json  rust-analyzer.js  server.js
vscode-extension/src/: extension.ts
