[package]
name = "cargo-fast-lint"
version = "0.1.0"
edition = "2024"
description = "A rust linter that focuses on performance and speed by not building portions of the project to run linting."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hastur-dev/cargo-fast-lint"
keywords = ["lint", "cargo", "rust", "performance"]
categories = ["development-tools"]

[[bin]]
name = "cargo-fast-lint"
path = "src/main.rs"

[dependencies]