[package]
name = "cargo-fl"
version = "0.3.0"
edition = "2021"
description = "Lightning-fast Rust linter for pre-compilation checks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hastur-dev/cargo-fl"
keywords = ["lint", "cargo", "rust", "performance", "ruff-like"]
categories = ["development-tools"]

[[bin]]
name = "cargo-fl"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = "1.0"
rayon = "1.8"
dashmap = "5.5"
ignore = "0.4"  # gitignore-aware file walking
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
once_cell = "1.19"
colored = "2.1"
indicatif = "0.17"
ahash = { version = "0.8", features = ["serde"] }  # faster hasher
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
memmap2 = "0.9"  # memory-mapped file I/O
bincode = "1.3"  # binary serialization for caching
quote = "1.0"    # code generation for auto-fixes

[[bin]]
name = "cargo-fl-lsp"
path = "src/lsp_server.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"